# srrg_object_detector

./: CMakeLists.txt  README.md  package.xml
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  object_detector_app.cpp  object_detector_gui_app.cpp
src/examples/: CMakeLists.txt  object_detection_app.cpp
src/srrg_object_detector/: object_detector.cpp  object_detector.h
src/srrg_object_detector_viewers/: CMakeLists.txt  detector_viewer.cpp  detector_viewer.h  simple_viewer.cpp  simple_viewer.h
